# HVAC-Climate-Data-Pipeline

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  config.env.example  hf_dataset_card.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: generate-and-publish.yml
airflow_dags/: __init__.py  hvac_pipeline_dag.py  prefect_pipeline_flow.py
api/: __init__.py  main.py
artifacts/json/: hvac_climate_telemetry.json
config/: expected_rooms.txt
diagrams/: README.md  architecture.mmd
notebooks/: exploration.ipynb  hvac_analysis_example.ipynb
scripts/: __init__.py  export_json.py  generate_data.py  generate_indoor_data.py  generate_outdoor_data.py  generate_sample_data.py  ingest_transform.py  push_to_huggingface.py  validate_json.py
tests/: __init__.py  test_pipeline.py
